📅 added correct page and notion tracker

--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
 </head>
 <body>
 	<div class="w">
-		<header>
-			<h1>@clearlysid — today</h1>
-			<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt quaerat tenetur facilis dolores at? Adipisci ipsum dolores quia dolore laborum.</p>
-		</header>
+		{% notion now %}
 	</div>
 </body>
 </html>
