--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>@clearlysid — today</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
+	<title>{%- if title -%} {{- title -}} {%- else -%} {{- seo.title -}} {%- endif -%}</title>
+	<link rel="canonical" href="https://www.sidds.me{{- page.url -}}" />
+	<meta name="description" content="{%- if description -%} {{- description -}} {%- else -%} {{- seo.description -}} {%- endif -%}"/>
+	<meta property="og:title" content="{%- if title -%} {{- title -}} {%- else -%} {{- seo.title -}} {%- endif -%}"/>
+	<meta property="og:description" content="{%- if description -%} {{- description -}} {%- else -%} {{- seo.description -}} {%- endif -%}"/>
+	<meta property="og:type" content="{%- if type -%} {{- type -}} {%- else -%} {{- seo.type -}} {%- endif -%}"/>
+	<meta property="og:image" content="{%- if image -%} {{- image -}} {%- else -%} {{- seo.image -}} {%- endif -%}"/>
+	<meta property="og:url" content="{{- page.url -}}" />
+	<meta property="og:site_name" content="{%- if author -%} {{- author -}} {%- else -%} {{- seo.author -}} {%- endif -%}"/>
+	<meta name="twitter:card" value="summary" />
+	<meta name="twitter:site" content="{%- if username -%} {{- username -}} {%- else -%} {{- seo.username -}} {%- endif -%}"/>
+	<meta name="twitter:title" content="{%- if title -%} {{- title -}} {%- else -%} {{- seo.title -}} {%- endif -%}"/>
+	<meta name="twitter:description" content="{%- if description -%} {{- description -}} {%- else -%} {{- seo.description -}} {%- endif -%}"/>
+	<meta name="twitter:creator" content="{%- if username -%} {{- username -}} {%- else -%} {{- seo.username -}} {%- endif -%}"/>
+	<meta name="twitter:image" content="{%- if image -%} {{- image -}} {%- else -%} {{- seo.image -}} {%- endif -%}"/>
 </head>
 <body>
 	<div class="w">
