--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 	<meta name="twitter:description" content="{{- seo.description -}}"/>
 	<meta name="twitter:creator" content="{{- seo.username -}}"/>
 	<meta name="twitter:image" content="{{- seo.image -}}"/>
+	<link rel="icon" href="favicons/favicon.ico">
+	<link rel="apple-touch-icon" href="favicons/apple-touch-icon.png">
+	<link rel="manifest" href="favicons/manifest.webmanifest">
 	<!-- <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script> -->
 </head>
 <body>
