--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
 	<link rel="icon" href="favicons/favicon.ico">
 	<link rel="apple-touch-icon" href="favicons/apple-touch-icon.png">
 	<link rel="manifest" href="favicons/manifest.webmanifest">
-	<!-- <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script> -->
 </head>
 <body>
 	<div class="w">
 		{% notion now %}
 	</div>
 
-	<!-- <script>
+	<script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
+	<script>
 		document.addEventListener('DOMContentLoaded', () => {
             twemoji.parse(document.body);
         });
-	</script> -->
+	</script>
 </body>
 </html>
